fix: button styling overlap

--- a/src/components/VideoDisplay/VideoCard/VideoCard.css
+++ b/src/components/VideoDisplay/VideoCard/VideoCard.css
@@ -86,7 +86,9 @@
   gap: 1rem;
 }
 
-.button {
+.like-button,
+.watchlater-button,
+.playlist-button {
   background-color: var(--pastel-green);
 }
 
